--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,19 @@
 [package]
 name = "dbml-rs"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 edition = "2021"
+description = "DBML Parser for Rust."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/apskhem/dbml-rs"
+readme = "README.md"
+authors = ["Apisit Ritreungroj <cyber1.record@gmail.com>"]
+keywords = ["compiler", "dbml"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 pest = "2"
 pest_derive = "2"
+
+[features]
+default = []
