fix: removing github dir from publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 authors = ["Apisit Ritreungroj <cyber1.record@gmail.com>"]
 keywords = ["parser", "parse", "dbml"]
 exclude = [
+  ".github/*",
   "tests/*",
 ]
 
