--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ exclude = [
 [dependencies]
 pest = "2"
 pest_derive = "2"
+derive_more = { version = "0.99", default-features = false, features = ["display"]}
 
 [features]
 default = []
