--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ exclude = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pest = "2"
-pest_derive = "2"
+pest = { version = "2.7", default-features = false, features = ["memchr"]}
+pest_derive = { version = "2.7", default-features = false }
 derive_more = { version = "0.99", default-features = false, features = ["display"]}
 
 [features]
